clang/test/BSC/Negative/Ownership/RuleCheck/rewrite_bsc_owned1/rewrite_bsc_owned1.cbs
// RUN: %clang_cc1 -ast-dump -verify %s

struct A {
    owned int a; // expected-error {{type of 'int' cannot be qualified by 'owned'}}
    int owned b; // expected-error {{type of 'int' cannot be qualified by 'owned'}}
    int owned * c; // expected-error {{type of 'int' cannot be qualified by 'owned'}}
    int* owned d;
    int* owned* owned e;
};

void ownedTest0() {
    int owned a; // expected-error {{type of 'int' cannot be qualified by 'owned'}}
    int* owned b;
    int* owned * owned d;
    return;
}

int* owned ownedTest2(int* owned p) {
    return p;
}

int main() {
    return 0;
}
